package edu.guia.solid.dip.abstractfactory;

public interface NotificationChannel {
    void send(String to, String message);
}
