package edu.guia.solid.dip.abstractfactory;

public class SmsChannel implements NotificationChannel {
  public void send(String to, String message){ /* enviar sms real omitido */ }
}

